; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_mbs_ptr.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_platform.c_os_wcs_to_mbs_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_wcs_to_mbs_ptr(i32* %0, i64 %1, i8** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8** %2, i8*** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %3
  %12 = load i32*, i32** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i64 @os_wcs_to_mbs(i32* %12, i64 %13, i8* null, i64 0)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = add i64 %15, 1
  %17 = mul i64 %16, 1
  %18 = call i8* @bmalloc(i64 %17)
  %19 = load i8**, i8*** %7, align 8
  store i8* %18, i8** %19, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i8**, i8*** %7, align 8
  %23 = load i8*, i8** %22, align 8
  %24 = load i64, i64* %8, align 8
  %25 = add i64 %24, 1
  %26 = call i64 @os_wcs_to_mbs(i32* %20, i64 %21, i8* %23, i64 %25)
  store i64 %26, i64* %4, align 8
  br label %29

27:                                               ; preds = %3
  %28 = load i8**, i8*** %7, align 8
  store i8* null, i8** %28, align 8
  store i64 0, i64* %4, align 8
  br label %29

29:                                               ; preds = %27, %11
  %30 = load i64, i64* %4, align 8
  ret i64 %30
}

declare dso_local i64 @os_wcs_to_mbs(i32*, i64, i8*, i64) #1

declare dso_local i8* @bmalloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
